# gemma-llama2-finetuning-demo

./: README.md  pyproject.toml  requirements.txt
data/: book_data_sft.txt
finetune-code/: finetune_gemma.py  finetune_llama.py
inference-code/: run_ft_gemma.py  run_ft_llama.py  run_raw_gemma.py  run_raw_llama.py
