[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "gemma-llama2-finetuning-demo"
version = "0.0.1"
authors = [
  { name="Haifeng Zhao", email="kevinhfzhao@gmail.com" },
]
description = "An LLM finetuning use case comparing Gemma and Llama2"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/piscaries/gemma-llama2-finetuning-demo/"

[tool.hatch.build]
exclude = [
  "dist/*",
]

[tool.hatch.build.targets.wheel]
packages = ["./"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
